--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^18.2.0",
     "react-chessboard": "^2.1.2",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.63.4",
     "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4"
   },
