--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
     "chess.js": "^1.0.0-beta.4",
     "react": "^18.2.0",
     "react-chessboard": "^2.1.2",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.63.4",
     "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4"
